update imgdemo